# kotlin-resolve-ap-issue

./: .bazelrc  .gitignore  BUILD.bazel  WORKSPACE
api/: AbstractModule.java  BUILD.bazel  MyAnnotation.java
module/: BUILD.bazel  JavaMain.java  KotlinModule.kt  Module.java  main.kt
processor/: AnnotationProcessor.java  BUILD.bazel
